--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,3 +59,13 @@ input::placeholder {
   font-size: 14px;
   
 }
+.error {
+  all: unset;
+  color: red;
+  margin-top: 30px;
+  position: absolute;
+  z-index: 0
+}
+.error2 {
+  margin-top: 135px
+}
