ajustes de css na pagina de adicionar cliente

--- a/src/components/SideBar/style.css
+++ b/src/components/SideBar/style.css
@@ -2,7 +2,7 @@
 .sidebarMenu{
 display: flex;
 flex-direction: column;
-padding-top: 80px;
+padding-top: 0;
 background-color: #263238;
 min-width: 200px;
 width: 20%;
