--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -33,7 +33,7 @@ body{
     background-color: #ffffff;
     border-radius:16px;
     box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
-    padding: 50px 71px;
+    padding: 50px 71px 0 71px;
 }
 
 .logo{
