--- a/src/pages/NewClient/styles.css
+++ b/src/pages/NewClient/styles.css
@@ -1,13 +1,16 @@
 .container-main{
     display: flex;
     
+    
+    
 }
 .clientContainerContent{
   background-color: #E5E5E5;
   margin: 0 5%;
   width: 80%;
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
+  padding-top: 5%;
 }
 .newClientFormDiv{
     width: 100%;
@@ -26,10 +29,10 @@
 .inputDiv{
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 50%;
 }
 .inputNewClient{
-    border: 2px solid #374952;
+    border: 1px solid #374952;
     border-radius: 10px;
     margin-bottom: 40px;
     width: 100%;
@@ -37,16 +40,20 @@
 .dualInput{
     display: flex;
     direction: row;
-    width: 70%;
+    width: 50%;
     gap: 25px;
 }
 .buttonsDiv{
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 .newClientTitle{
     color: black;
     font-size: 24px;
     font-weight: 400;
+    margin-top: 10px;
 }
+
+
