--- a/src/pages/Charges/styles.css
+++ b/src/pages/Charges/styles.css
@@ -1,7 +1,7 @@
 .main-charges {
     padding-left: 72px;
 }
-.cards-container {
+.cards-container2 {
     display: flex;
     flex-direction: column;
     row-gap: 16px;
