--- a/src/components/ChargeTable/styles.css
+++ b/src/components/ChargeTable/styles.css
@@ -59,11 +59,14 @@
     text-align: left;
     text-transform: uppercase;
 }
-.clientcard-status-red {
+.charge-status-red {
     color: #FF4D4D;
 }
-.clientcard-status-green {
+.charge-status-green {
     color: #4EC06E;
+}
+.charge-status-blue {
+    color: #5197B5
 }
 
 .linha {
