--- a/src/components/ChargeCard/styles.css
+++ b/src/components/ChargeCard/styles.css
@@ -1,13 +1,18 @@
 .main-chargecard {
-    background-color: #FFFFFF;
-    display: flex;
-    column-gap: 70px;
+    height: 90px;
+    width: 410px;
+    left: 779px;
+    top: 250px;
     border-radius: 8px;
-    padding-left: 24px;
-    align-items: center;
-    cursor: pointer;
+    background-color: #F9F9F9;
+    margin-left: 28px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
 }
 .chargecard-text {
+    all: unset;
     font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
@@ -17,7 +22,8 @@
     text-align: left;
     color: #4c4c4c
 }
-.client-id {
+.charge-id-client {
+    all: unset;
     font-family: Montserrat;
     font-size: 14px;
     font-style: normal;
@@ -28,6 +34,7 @@
     color: #4c4c4c
 }
 .chargecard-status {
+    all: unset;
     font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
@@ -41,4 +48,14 @@
 }
 .chargecard-status-green {
     color: #4EC06E;
+}
+.charge-info {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 10px
+}
+.charge-details {
+    display: flex;
+    column-gap: 5px;
+    align-items: center;
 }
