--- a/src/pages/NewCharge/styles.css
+++ b/src/pages/NewCharge/styles.css
@@ -6,8 +6,17 @@
 .custom-input {
     border: 1px solid #374952;
     border-radius: 8px;
-    width: 512px;
+    width: 488px;
     height: 56px;
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    padding-left: 24px;
+
 }
 .container-main{
     display: flex;
@@ -28,7 +37,7 @@
     align-items: center;
     background-color: #FFFFFF;
     border-radius: 20px;
-    row-gap: 35px
+    row-gap: 30px
 }
 
 .formNewClient{
@@ -41,10 +50,38 @@
 .valor-input {
     border: 1px solid #374952;
     border-radius: 8px;
-    width: 184px;
+    width: 160px;
+    padding-left: 24px;
     height: 35px;
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
 }
 .valor-vencimento {
     display: flex;
     column-gap: 16px;
+}
+.description-alert {
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    color: #868686;
+}
+.custom-input::placeholder{
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    
 }
