--- a/src/pages/NewClient/styles.css
+++ b/src/pages/NewClient/styles.css
@@ -35,7 +35,16 @@
     border: 1px solid #374952;
     border-radius: 10px;
     margin-bottom: 40px;
-    width: 100%;
+    width: 94%;
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    padding-left: 24px;
+
 }
 .dualInput{
     display: flex;
