--- a/src/components/ModalClient/styles.css
+++ b/src/components/ModalClient/styles.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 }
 .modal-content-client {
     min-width: 958px;
@@ -20,6 +21,7 @@
     padding-right: 45px;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 .client-name-modal {
     all: unset;
