--- a/src/components/ModalEditClient/styles.css
+++ b/src/components/ModalEditClient/styles.css
@@ -1,9 +1,26 @@
+.modalEditClient{
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-.editClientFormDiv{
-    width: 100%;
+}
+
+.modalContatEditClient{
+    
+    box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+    width: 80%;
     background-color: white;
     border-radius: 20px;
     padding-top: 5%;
+    
+
+
 }
 
 .formEditClient{
@@ -11,12 +28,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
 
 }
 .inputDivEditClient{
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 60%;
+    
 }
 .inputEditClient{
     border: 1px solid #374952;
@@ -36,19 +55,23 @@
 .dualInputEditClient{
     display: flex;
     direction: row;
-    width: 50%;
+    width: 60%;
     gap: 25px;
+   
 }
 .buttonsDivEditClient{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 40px;
     
 }
-.editClientTitle{
-    color: black;
-    font-size: 24px;
-    font-weight: 400;
-    margin-top: 10px;
+ 
+.closeIcon {
+    padding-left: 90%;
+    cursor: pointer;
+    
+    
 }
+
 
