Melhorias de css

--- a/src/components/ChargeCard/styles.css
+++ b/src/components/ChargeCard/styles.css
@@ -52,7 +52,8 @@
 .charge-info {
     display: flex;
     justify-content: space-between;
-    padding-top: 10px
+    padding-top: 10px;
+    align-items: center
 }
 .charge-details {
     display: flex;
