--- a/src/pages/Reports/styles.css
+++ b/src/pages/Reports/styles.css
@@ -6,8 +6,32 @@ font-weight: 400;
 line-height: 29px;
 letter-spacing: 0em;
 text-align: left;
+cursor: pointer;
 }
 .label-div {
     display: flex;
     column-gap: 10px;
+}
+.report-menu {
+    all: unset;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
+    cursor: pointer;
+}
+.pink {
+    color: #DA0175
+}
+.report-menu-box {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    padding: 20px;
+    background: #F8F8F8;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 3px;
 }
