--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -68,6 +68,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 10% 0;
+  cursor: pointer;
 }
 
 .content-padding {
@@ -85,6 +86,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10%;
+  cursor: pointer;
 }
 
 .card-2 {
@@ -110,6 +112,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 10% 0;
+  cursor: pointer;
 }
 
 .rectangle2-card2 {
@@ -123,6 +126,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10%;
+  cursor: pointer;
 }
 
 .rectangle3-card2 {
@@ -136,6 +140,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 0 10% 0;
+  cursor: pointer;
 }
 
 .title-card {
