--- a/src/components/ModalChargeEdit/styles.css
+++ b/src/components/ModalChargeEdit/styles.css
@@ -14,11 +14,94 @@
 .modalContatChargeEdit{
     
     box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
-    width: 80%;
     background-color: white;
     border-radius: 20px;
-    padding-top: 5%;
+    padding-top: 2%;
+    padding-bottom: 3%;
     
+}
 
+.input-div {
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px
+}
+.custom-input {
+    border: 1px solid #374952;
+    border-radius: 8px;
+    width: 488px;
+    height: 56px;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    padding-left: 24px;
+}
 
+.clientContainerContent{
+  background-color: #E5E5E5;
+  margin: 0 5%;
+  width: 80%;
+  display: flex;
+  flex-direction:column;
+  padding-top: 5%;
+}
+.new-charge-form {
+    width: 958px;
+    height: 556px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    row-gap: 30px
+}
+
+.formNewClient{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+.valor-input {
+    border: 1px solid #374952;
+    border-radius: 8px;
+    width: 160px;
+    padding-left: 24px;
+    height: 35px;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+}
+.valor-vencimento {
+    display: flex;
+    column-gap: 16px;
+}
+.description-alert {
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    color: #868686;
+}
+.custom-input::placeholder{
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0.25px;
+    text-align: left;
+    
 }
