--- a/src/components/ModalChargeEdit/styles.css
+++ b/src/components/ModalChargeEdit/styles.css
@@ -49,7 +49,7 @@
   flex-direction:column;
   padding-top: 5%;
 }
-.new-charge-form {
+.edit-charge-form {
     width: 958px;
     height: 556px;
     display: flex;
