--- a/src/components/CustomDatePicker/styles.css
+++ b/src/components/CustomDatePicker/styles.css
@@ -18,6 +18,7 @@
     text-align: left;
     padding-right: 20px;
     padding-left: 20px;
+    background: url(../../images/calendar.svg) no-repeat center left 95%;
 }
 .react-datepicker-wrapper .react-datepicker__input-container {
     height: 40px;
