--- a/src/components/SearchInput/styles.css
+++ b/src/components/SearchInput/styles.css
@@ -1,7 +1,10 @@
 .search-container {
-    display: flex;
-    align-items: center;
+   display: flex;
+    align-items:flex-end;
     justify-content: center;
+    margin-bottom: 20px;
+    flex-direction: row;
+    margin-left: 650px;
 }
 .search-button {
     all: unset;
@@ -18,6 +21,7 @@
     line-height: 15px;
     color: #FFFFFF;
     padding-left: 38px;
+   
 }
 .search-input {
     background-color: #F7F7F7;
