--- a/src/pages/Charges/styles.css
+++ b/src/pages/Charges/styles.css
@@ -5,7 +5,8 @@
     display: flex;
     flex-direction: column;
     row-gap: 16px;
-    padding-top: 200px
+   --padding-top: 200px;
+   
 }
 
 .container-legends {
@@ -28,4 +29,8 @@
     letter-spacing: 0.005em;
     text-align: left;
     color: #FFFFFF;
+}
+.searchInput {
+    margin-top: 120px;
+
 }
