--- a/src/components/ModalChargeEdit/styles.css
+++ b/src/components/ModalChargeEdit/styles.css
@@ -51,7 +51,6 @@
 }
 .edit-charge-form {
     width: 958px;
-    height: 556px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,4 +107,14 @@
 
 .trash{
     margin-top: 20px;
+    display: flex;
+    align-items: flex-end;
+    gap: 6px;
 }
+
+.trash-container{
+    display: flex;
+    align-items: center;
+
+}
+
