--- a/src/components/ModalChargeEdit/styles.css
+++ b/src/components/ModalChargeEdit/styles.css
@@ -109,7 +109,9 @@
 .trash{
     margin-top: 20px;
     display: flex;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
     gap: 6px;
 }
 
@@ -118,4 +120,13 @@
     align-items: center;
 
 }
-
+.delete-charge-text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    letter-spacing: 0.25px;
+    text-decoration-line: underline;
+    color: #868686
+}
